--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -7,6 +7,7 @@ html {
   font-weight: 400;
   line-height: normal;
   color: #B7B6BD;
+  scroll-behavior: smooth; 
   
   @media (min-width: 1024px) {
     font-size: 16px;
