--- a/src/assets/scss/components/_components.scss
+++ b/src/assets/scss/components/_components.scss
@@ -1,5 +1,3 @@
-@import './wrappers';
-@import './navigation';
 @import './button';
-@import './form';
-@import './mmenu';
+@import './modal';
+@import './wrappers';
