--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
   </a>
 
   <div class="header__links">
-    <a href="#">Generate image</a>
-    <a href="#">How it works</a>
+    <a href="#creating">Generate image</a>
+    <a href="#howit">How it works</a>
   </div>
 </header>
