--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,18 +1,81 @@
-<footer class="footer container">
-  <div class="footer__name">Name Name</div>
-  <div class="footer__links">
-    <nav>
-      <ul>
-        <li><a href="#">Generate image</a></li>
-        <li><a href="#">How it works</a></li>
-      </ul>
-    </nav>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__name">Photostyler</div>
+    <div class="footer__links">
+      <div class="footer__navigation">
+        <nav class="footer__main-nav">
+          <ul>
+            <li><a href="#creating">Generate image</a></li>
+            <li><a href="#howit">How it works</a></li>
+          </ul>
+        </nav>
 
-    <nav>
-      <ul>
-        <li><a href="#">Privacy policy</a></li>
-        <li><a href="#">Terms of use</a></li>
-      </ul>
-    </nav>
+        <nav class="footer__sub-nav">
+          <ul>
+            <li><a href="/privacy.html">Privacy policy</a></li>
+            <li><a href="/terms.html">Terms of use</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer__contacts">
+        <div>
+          <span>Beneficiary name: ICONPIX Llp</span>
+          <span>Address: 65 Compton Street, London, EC1V 0BN, United Kingdom</span>
+        </div>
+        <div>
+          <span class="title">Contacts</span>
+          <a href="https://iconpix24.com" target="_blank"><span>https://iconpix24.com</span></a>
+          <a href="mailto:contact@iconpix24.com"><span>contact@iconpix24.com</span></a>
+          <a href="tel:+447458164352"><span>+44 7458164352</span></a>
+        </div>
+      </div>
+    </div>
+  </div>  
+
+  <div class="donate-modal">
+    <div class="close-modal">
+      <img src="assets/images/icon-close.svg" alt="Close modal">
+    </div>
+    <div class="modal-container">
+      <div class="donate-title">Choose an amount, you would like to donate</div>
+      <div class="donate-bill">
+          <div class="bill-item">
+            <span>2$</span>
+            <img src="assets/images/arrow-r.svg" alt="arrow">
+          </div>
+          <div class="bill-item">
+            <span>5$</span>
+            <img src="assets/images/arrow-r.svg" alt="arrow">
+          </div>
+          <div class="bill-item">
+            <span>10$</span>
+            <img src="assets/images/arrow-r.svg" alt="arrow">
+          </div>
+          <div class="bill-item">
+            <span>15$</span>
+            <img src="assets/images/arrow-r.svg" alt="arrow">
+          </div>
+          <div class="bill-item">
+            <span>50$</span>
+            <img src="assets/images/arrow-r.svg" alt="arrow">
+          </div>
+          <div class="bill-item">
+            <span>125$</span>
+            <img src="assets/images/arrow-r.svg" alt="arrow">
+          </div>
+          <div class="bill-item">
+            <span>175$</span>
+            <img src="assets/images/arrow-r.svg" alt="arrow">
+          </div>
+          <div class="bill-item">
+            <span>500$</span>
+            <img src="assets/images/arrow-r.svg" alt="arrow">
+          </div>
+          <div class="bill-item">
+            <span>1000$</span>
+            <img src="assets/images/arrow-r.svg" alt="arrow">
+          </div>
+      </div>
+    </div>
   </div>
 </footer>
